<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_change_password_title"
        android:textSize="20sp"
        android:layout_marginBottom="24dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_old_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_new_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_new_password_confirm"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_change_password"
        style="?attr/materialButtonOutlinedStyle" />
</LinearLayout>
