<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/iconView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_password_default"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:endIconMode="none"
            android:textColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_password_details_title"
                android:enabled="false"
                android:textColor="@android:color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:endIconMode="clear_text"
            android:textColor="@android:color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_password_details_login"
                android:textColor="@android:color/black"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:endIconMode="password_toggle"
            android:textColor="@android:color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_password_details_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/urlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:endIconMode="clear_text"
            android:textColor="@android:color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/urlView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_password_details_url"
                android:textColor="@android:color/black"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:endIconMode="clear_text"
            android:textColor="@android:color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_password_details_description"
                android:maxLines="3"
                android:enabled="false"
                android:textColor="@android:color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_password_details_change"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_password_details_delete"
            android:textColor="@android:color/holo_red_dark"
            style="?attr/materialButtonOutlinedStyle"
            android:backgroundTint="@android:color/white"
            app:strokeColor="@android:color/holo_red_dark"
            app:strokeWidth="2dp"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>
</ScrollView>

